<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="start"
    android:layout_margin="@dimen/_5dp">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="@dimen/_10dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start|center_vertical"

            >
            <TextView
                android:id="@+id/tvNameTitle"
                android:layout_width="@dimen/_80dp"
                android:layout_height="wrap_content"
                android:text="@string/title_name"
                android:textStyle="bold"
                android:textColor="@color/text_color" />
            <TextView
                android:id="@+id/tvName"
                android:layout_width="@dimen/_250dp"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/text_color" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start|center_vertical">
            <TextView
                android:id="@+id/tvTagLineTitle"
                android:layout_width="@dimen/_80dp"
                android:layout_height="wrap_content"
                android:text="@string/title_tagline"
                android:textStyle="bold"
                android:textColor="@color/text_color" />

            <TextView
                android:id="@+id/tvTagLine"
                android:layout_width="@dimen/_250dp"
                android:layout_height="wrap_content"
                android:text="@string/tagline"
                android:textColor="@color/text_color"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start|center_vertical">
            <TextView
                android:id="@+id/tvRatingTitle"
                android:layout_width="@dimen/_80dp"
                android:layout_height="wrap_content"
                android:text="@string/title_rating"
                android:textStyle="bold"
                android:textColor="@color/text_color" />

            <TextView
                android:id="@+id/tvRating"
                android:layout_width="@dimen/_250dp"
                android:layout_height="wrap_content"
                android:text="@string/rating"
                android:textColor="@color/text_color" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start|center_vertical">

            <TextView
                android:id="@+id/tvDateTitle"
                android:layout_width="@dimen/_80dp"
                android:layout_height="wrap_content"
                android:text="@string/title_date"
                android:textStyle="bold"
                android:textColor="@color/text_color" />

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="@dimen/_250dp"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textColor="@color/text_color" />
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
